@@ -1133,6 +1133,7 @@ XRCDLL_OBJECTS =  \
 	$(OBJS)\xrcdll_xh_slidr.o \
 	$(OBJS)\xrcdll_xh_spin.o \
 	$(OBJS)\xrcdll_xh_split.o \
+	$(OBJS)\xrcdll_xh_srchctrl.o \
 	$(OBJS)\xrcdll_xh_statbar.o \
 	$(OBJS)\xrcdll_xh_stbmp.o \
 	$(OBJS)\xrcdll_xh_stbox.o \
@@ -1199,6 +1200,7 @@ XRCLIB_OBJECTS =  \
 	$(OBJS)\xrclib_xh_slidr.o \
 	$(OBJS)\xrclib_xh_spin.o \
 	$(OBJS)\xrclib_xh_split.o \
+	$(OBJS)\xrclib_xh_srchctrl.o \
 	$(OBJS)\xrclib_xh_statbar.o \
 	$(OBJS)\xrclib_xh_stbmp.o \
 	$(OBJS)\xrclib_xh_stbox.o \
@@ -1483,6 +1485,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_xh_slidr.o \
 	$(OBJS)\monodll_xh_spin.o \
 	$(OBJS)\monodll_xh_split.o \
+	$(OBJS)\monodll_xh_srchctrl.o \
 	$(OBJS)\monodll_xh_statbar.o \
 	$(OBJS)\monodll_xh_stbmp.o \
 	$(OBJS)\monodll_xh_stbox.o \
@@ -2120,6 +2123,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_xh_slidr.o \
 	$(OBJS)\monolib_xh_spin.o \
 	$(OBJS)\monolib_xh_split.o \
+	$(OBJS)\monolib_xh_srchctrl.o \
 	$(OBJS)\monolib_xh_statbar.o \
 	$(OBJS)\monolib_xh_stbmp.o \
 	$(OBJS)\monolib_xh_stbox.o \
@@ -6060,6 +6064,9 @@ $(OBJS)\monodll_xh_spin.o: ../../src/xrc/xh_spin.cpp
 $(OBJS)\monodll_xh_split.o: ../../src/xrc/xh_split.cpp
 	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
 
+$(OBJS)\monodll_xh_srchctrl.o: ../../src/xrc/xh_srchctrl.cpp
+	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
+
 $(OBJS)\monodll_xh_statbar.o: ../../src/xrc/xh_statbar.cpp
 	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
 
@@ -8226,6 +8233,9 @@ $(OBJS)\monolib_xh_spin.o: ../../src/xrc/xh_spin.cpp
 	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\monolib_xh_split.o: ../../src/xrc/xh_split.cpp
+	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\monolib_xh_srchctrl.o: ../../src/xrc/xh_srchctrl.cpp
 	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\monolib_xh_statbar.o: ../../src/xrc/xh_statbar.cpp
@@ -13730,6 +13740,9 @@ $(OBJS)\xrcdll_xh_spin.o: ../../src/xrc/xh_spin.cpp
 $(OBJS)\xrcdll_xh_split.o: ../../src/xrc/xh_split.cpp
 	$(CXX) -c -o $@ $(XRCDLL_CXXFLAGS) $(CPPDEPS) $<
 
+$(OBJS)\xrcdll_xh_srchctrl.o: ../../src/xrc/xh_srchctrl.cpp
+	$(CXX) -c -o $@ $(XRCDLL_CXXFLAGS) $(CPPDEPS) $<
+
 $(OBJS)\xrcdll_xh_statbar.o: ../../src/xrc/xh_statbar.cpp
 	$(CXX) -c -o $@ $(XRCDLL_CXXFLAGS) $(CPPDEPS) $<
 
@@ -13899,6 +13912,9 @@ $(OBJS)\xrclib_xh_spin.o: ../../src/xrc/xh_spin.cpp
 	$(CXX) -c -o $@ $(XRCLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\xrclib_xh_split.o: ../../src/xrc/xh_split.cpp
+	$(CXX) -c -o $@ $(XRCLIB_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\xrclib_xh_srchctrl.o: ../../src/xrc/xh_srchctrl.cpp
 	$(CXX) -c -o $@ $(XRCLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\xrclib_xh_statbar.o: ../../src/xrc/xh_statbar.cpp
