@@ -1146,6 +1146,10 @@ SOURCE=..\..\include\wx\xrc\xh_split.h
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\include\wx\xrc\xh_srchctrl.h
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\include\wx\xrc\xh_statbar.h
 # End Source File
 # Begin Source File
@@ -1367,6 +1371,10 @@ SOURCE=..\..\src\xrc\xh_spin.cpp
 # Begin Source File
 
 SOURCE=..\..\src\xrc\xh_split.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\src\xrc\xh_srchctrl.cpp
 # End Source File
 # Begin Source File
 
