@@ -976,6 +976,21 @@
                                     <value>"So many pretty widgets" said Pooh, said he. "So many pretty widgets", said Pooh.</value>
                                 </object>
                             </object>
+                            <object class="sizeritem">
+                                <flag>wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                                <border>5</border>
+                                <object class="wxStaticText" name="controls_textctrl4_statictext">
+                                    <label>Search for:</label>
+                                </object>
+                            </object>
+                            <object class="sizeritem">
+                                <flag>wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                                <border>5</border>
+                                <object class="wxSearchCtrl" name="controls_multiline_searchctrl">
+                                    <size>180,-1</size>
+                                    <value>true love</value>
+                                </object>
+                            </object>
                         </object>
                     </object>
                 </object>
