@@ -137,6 +137,9 @@ void wxXmlResource::InitAllHandlers()
 #if wxUSE_SCROLLBAR
     AddHandler(new wxScrollBarXmlHandler);
 #endif
+#if wxUSE_SEARCHCTRL
+    AddHandler(new wxSearchCtrlXmlHandler);
+#endif
 #if wxUSE_SLIDER
     AddHandler(new wxSliderXmlHandler);
 #endif
