@@ -156,6 +156,7 @@ All (GUI):
 - Added support for two auxiliary mouse buttons to wxMouseEvent (Chris Weiland).
 - Added wxToolTip::SetAutoPop() and SetReshow() (Jan Knepper)
 - Added wxTaskBarIcon::Destroy()
+- Added XRC handler for wxSearchCtrl (Sander Berents)
 
 wxGTK:
 
